fix horizontal scroll in ag grid

--- a/TransientAI.UI/transientai-ui/src/assets/ag-grid-custom.scss
+++ b/TransientAI.UI/transientai-ui/src/assets/ag-grid-custom.scss
@@ -19,10 +19,12 @@
 
   ::-webkit-scrollbar {
     width: 7px;
+    height: 5px;
   }
 
   ::-webkit-scrollbar:hover {
     width: 7px;
+    height: 5px;
   }
 
   ::-webkit-scrollbar-track {
